2002-01-25  Alex Larsson  <alexl@redhat.com>

	* gdk/linux-fb/gdkdrawable-fb2.c (gdk_drawable_impl_fb_class_init):
	Implement copy_to_image instead of get_image
	
	* gdk/linux-fb/gdkimage-fb.c:
	Implement _gdk_image_new_for_depth, _gdk_windowing_get_bits_for_depth and
	_gdk_fb_copy_to_image.
	Based in part on patch from Mathieu Lacage <mathieu_lacage@realmagic.fr>

	* gdk/linux-fb/gdkmain-fb.c:
	Make ENABLE_FB_MANAGER region larger.

	* gdk/linux-fb/gdkprivate-fb.h:
	Change _gdk_fb_get_image to _gdk_fb_copy_to_image.

2002-01-25  Sven Neumann  <sven@gimp.org>

	* gtk/gtkwindow.c (gtk_window_get_size): changed the comment so
	that gtk-doc doesn't get confused.

Fri Jan 25 14:03:36 2002  Tim Janik  <timj@gtk.org>

	* gtk/gtkspinbutton.c (gtk_spin_button_draw_arrow): assert
	that the passed in arrow is always _UP or _DOWN, this catches
	false invocations which lead to drawing artefacts.
	(start_spinning): likewise, i.e. sanity check the passed in arrow.
	(gtk_spin_button_button_release): fix arrow redrawing.
	(gtk_spin_button_button_press): must set click_child for
	button3 even if we don't take spinning action right away.

	* gtk/gtkspinbutton.h (struct _GtkSpinButton): document
	valid values for click_child.

Thu Jan 24 23:03:24 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_get_path_at_pos): update docs,
	return current FALSE if x is smaller than the current visible area,
	not than the requested area, don't correct y coordinate,
	TREE_WINDOW_Y_TO_RBTREE_Y will do that. Fixes #67477.

Thu Jan 24 15:41:08 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c
	 (gtk_tree_view_motion_draw_column_motion_arrow): fix column
	 reordering fully.
	 (gtk_tree_view_size_allocate): fix evil bug.

Thu Jan 24 11:53:19 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_destroy): Don't clear
	the model until we clean up all the other objects
	that might refer to the object.
